# SkjaldrsBot

./: .gitignore  Cargo.toml  README.md
src/: config.rs  discord.rs  main.rs  window_handler.rs
